# clause

./: .astylerc  .gitignore  BUILD  CMakeLists.txt  Doxyfile  Doxyfile.sh  LICENSE  README.md  docker-compose.yml  sample.env
admin/: flush.sh  formatter.sh  generator.sh  localrc.sample  precompile.sh  release.sh  start.sh  stop.sh
cmake/: default.cmake
docs/: DictTrie_8hpp_source.html  FileUtils_8hpp_source.html  FullSegment_8hpp_source.html  HMMModel_8hpp_source.html  HMMSegment_8hpp_source.html  Jieba_8hpp_source.html  KeywordExtractor_8hpp_source.html  LocalVector_8hpp_source.html  MPSegment_8hpp_source.html  MathUtils_8hpp_source.html  MixSegment_8hpp_source.html  PosTagger_8hpp_source.html  PreFilter_8hpp_source.html  QuerySegment_8hpp_source.html  SegmentBase_8hpp_source.html  SegmentTagged_8hpp_source.html  StdExtension_8hpp_source.html  StringUtils_8hpp_source.html  TextRankExtractor_8hpp_source.html  TimeUtils_8hpp_source.html  Trie_8hpp_source.html  Unicode_8hpp_source.html  VectorUtils_8hpp_source.html  activemq_8h_source.html  annotated.html  (+737 more)
src/: CMakeLists.txt
src/clause/: .dockerignore  CMakeLists.txt  Dockerfile  main.cpp
src/clause/client/: broker.test.js  chat.test.js  customdict.test.js  env.sample  intent.test.js  package-lock.json  package.json  pattern_dict.test.js  slots.test.js  sysdicts.test.js  train.test.js  utters.test.js  version.test.js
src/clause/client/gen-nodejs/: Serving.js  server_types.js
src/clause/client/services/: activemq.service.js
src/clause/config/: aliyun.source.list
src/clause/config/server/: cmd.flags.docker  cmd.flags.sample
src/clause/config/sql/: 0.clause-setup.sql
src/clause/config/sql/upgrade/: 001.upgrade_add_patterndict.sql  002.upgrade_add_sysdict_any.sql
src/clause/docs/design/: chatopera.sql.pd  clause_database.pdm
src/clause/scripts/: test.sh
src/clause/scripts/server/: build.sh  compile.sh  dev.sh  liveload.sh  thrift.sh
src/clause/serving/: Serving.cpp  Serving.h  Serving_server.skeleton.cpp  server_constants.cpp  server_constants.h  server_types.cpp  server_types.h
src/clause/src/: activemq.cpp  activemq.h  bot.cpp  bot.h  handler.cpp  handler.h  maf.hpp  marcos.h  mysql.cpp  mysql.h  pattern.cpp  pattern.h  publisher.cpp  publisher.h  raf.hpp  subscriber.cpp  subscriber.h
src/clause/src/sysdicts/: client.cpp  client.h
src/clause/src/sysdicts/serving/: Serving.cpp  Serving.h  server_constants.cpp  server_constants.h  server_types.cpp  server_types.h
src/clause/tests/: testsuite.cpp  tst-pattern.cpp
src/clause/thrift/: server.dsl
src/distance/: CMakeLists.txt
src/distance/src/: levenshtein.cpp  levenshtein.h  similarity.cpp  similarity.h  wordoverlap.cpp  wordoverlap.h
src/hat-trie/: .gitignore  CMakeLists.txt  README.md
src/hat-trie/include/tsl/: serialize.hpp
src/hat-trie/scripts/: test.sh
src/hat-trie/tests/: testsuite.cpp  tst-serialize.cpp  tst-trie.cpp
src/hat-trie/unittest/: CMakeLists.txt  trie_map_tests.cpp  trie_set_tests.cpp  utils.h
src/intent/: CMakeLists.txt  Dockerfile  README.md  main.cpp
src/intent/config/: cmd.flags.docker  cmd.flags.sample
src/intent/scripts/: build.sh  compile.sh  dev.sh  test.sh  thrift.sh
src/intent/serving/: Serving.cpp  Serving.h  Serving_server.skeleton.cpp  server_constants.cpp  server_constants.h  server_types.cpp  server_types.h
src/intent/src/: connection.cpp  connection.h  handler.cpp  handler.h  publisher.cpp  publisher.h  samples.cpp  samples.h  subscriber.cpp  subscriber.h  trainer.cpp  trainer.h
src/intent/tests/: tst-activemq.cpp  tst-cartprod.cpp  tst-sysdicts.cpp  tst-train.cpp
src/intent/thrift/: server.dsl
src/jieba/: CMakeLists.txt  README.md  demo.cpp
src/jieba/include/cppjieba/: DictTrie.hpp  FullSegment.hpp  HMMModel.hpp  KeywordExtractor.hpp  LocalVector.hpp  MPSegment.hpp  MixSegment.hpp  PosTagger.hpp  PreFilter.hpp  QuerySegment.hpp  SegmentBase.hpp  TextRankExtractor.hpp  Trie.hpp  Unicode.hpp
src/jieba/scripts/: demo.sh  test.sh
src/jieba/tests/: tst-jieba.cpp  tst-keyword_extractor.cpp  tst-pos_tagger_test.cpp  tst-pre_filter.cpp  tst-segments.cpp  tst-textrank.cpp  tst-trie.cpp  tst-unicode.cpp
src/lac/: CMakeLists.txt  README.md
src/lac/include/: ilac.h
src/lac/scripts/: test.sh
src/lac/src/: customization_tagger.cpp  customization_tagger.h  ilac.cpp  lac.cpp  lac.h  lac_glb.h  lac_util.cpp  lac_util.h  main_tagger.cpp  main_tagger.h
src/lac/tests/: testsuite.cpp  tst-lac.cpp
src/ner/: CMakeLists.txt  demo.cpp
src/ner/assets/: cmd.flags.sample  fixture1.train.txt
src/ner/scripts/: dev.sh
src/ner/src/: crfsuite.hpp  crfsuite_api.hpp  iwa.c  iwa.h
src/proto/: CMakeLists.txt
src/proto/config/: intent.proto
src/proto/scripts/: gen.cpp.sh  gen.java.sh  gen.js.sh
src/redis/: CMakeLists.txt
src/redis/scripts/: test.sh
src/redis/src/: redis.cpp  redis.h
src/redis/tests/: testsuite.cpp  tst-redis.cpp
src/regex/: CMakeLists.txt  README.md
src/regex/scripts/: test.sh
src/regex/src/: pattern.cpp  pattern.h
src/regex/tests/: tst-pattern.cpp
src/sample/: CMakeLists.txt  README.md
src/sample/scripts/: compile.sh  dev.sh
src/sample/src/: sample.cpp
src/sep/: CMakeLists.txt  README.md
src/sep/scripts/: test.sh
src/sep/src/: emoji.cpp  emoji.h  punctuations.cpp  punctuations.h  stopwords.cpp  stopwords.h
src/sep/tests/: testsuite.cpp  tst-sep.cpp
src/sysdicts/: CMakeLists.txt  Dockerfile  README.md  main.cpp
src/sysdicts/client/: .env  package-lock.json  package.json  sysdicts.test.js
src/sysdicts/client/gen-nodejs/: Serving.js  server_types.js
src/sysdicts/config/: cmd.flags.docker  cmd.flags.sample
src/sysdicts/scripts/: build.sh  compile.sh  dev.sh
src/sysdicts/serving/: Serving.cpp  Serving.h  Serving_server.skeleton.cpp  server_constants.cpp  server_constants.h  server_types.cpp  server_types.h
src/sysdicts/src/: handler.cpp  handler.h  marcos.h
src/sysdicts/thrift/: server.dsl
src/utils/: FileUtils.hpp  MathUtils.hpp  StdExtension.hpp  StringUtils.hpp  TimeUtils.hpp  VectorUtils.hpp  basictypes.h  marcos.h
(+274 files in other folders)
