file(GLOB PROJECT_COMPONENT RELATIVE ${PROJECT_SOURCE_DIR}/ *)
foreach(SUBDIR ${PROJECT_COMPONENT})
    if(IS_DIRECTORY ${PROJECT_SOURCE_DIR}/${SUBDIR})
        if(EXISTS ${PROJECT_SOURCE_DIR}/${SUBDIR}/CMakeLists.txt)
            message(STATUS "GET PROJECT COMPONENT --> " ${PROJECT_SOURCE_DIR}/${SUBDIR})
            add_subdirectory(${PROJECT_SOURCE_DIR}/${SUBDIR})
        endif()
    endif()
endforeach()